Bug 389098 - "Automatic junk (spam) detection on messages moved by a filter from IMAP - should move to junk folder directly after move and detecting junk" [r+sr+a=bienvenu]