mailnews/local/src/nsLocalMailFolder.h
@@ -70,6 +70,7 @@ struct nsLocalMailCopyState
   nsCOMPtr<nsIArray> m_messages;
   nsRefPtr<nsLocalMoveCopyMsgTxn> m_undoMsgTxn;
   nsCOMPtr<nsIMsgDBHdr> m_message; // current copy message
+  nsMsgMessageFlagType m_flags; // current copy message flags
   nsRefPtr<nsParseMailMessageState> m_parseMsgState;
   nsCOMPtr<nsIMsgCopyServiceListener> m_listener;
   nsCOMPtr<nsIMsgWindow> m_msgWindow;
